# tohoku_sd_lora

./: .gitignore  .markdownlint.json  Makefile  README.md  Taskfile.yml  _typos.toml  package.json  pnpm-lock.yaml  pyproject.toml  tag_target.json  train.mk  train.sh
.github/workflows/: ci.yml  codeql-analysis.yml  stale-issues.yml  typos.yml
config/: pyproject.toml
data/: auto_tags.jsonl  exclude_images.tsv  manual_tags.tsv  tag_target.json  trigger.json
data/config/: config_accelerate.yaml  config_dataset.toml  config_train.toml  test_prompt.txt  test_prompt_common_negative.txt  test_prompt_common_positive.txt  test_prompt_template.txt
data/tag_groups/: body.txt  chuwa.txt  costume.txt  hair_ornament.txt  zfr.txt
data/urls/: Itako.txt  Kioc.txt  Kiritan.txt  Kiritan_sd.txt  Metan_sd.txt  Shinobi.txt  Usagi.txt  Usagi_sd.txt  Zfr.txt  Zundamon.txt  Zundamon_sd.txt  Zunko.txt  Zunko_sd.txt  anko.txt  chanko.txt  itako.txt  itako_oc.txt  itako_sd.txt  kiritan.txt  melon.txt  metan.txt  tsurugi.txt  usagi.txt
data/urls/_special/: chanko.txt  itako_logo.txt  kiritan.txt  metan_logo.txt  sora_logo.txt  tsurugi.txt  usagi_logo.txt  zunko_logo.txt
scripts/: convert_image_0.sh  convert_image_1.sh  convert_test_prompt.py  copy_generated_models.py  copy_models.py  exclude_invalid_data_from_meta.py  filtered_copy.py  filtered_mksymlink.py  gen_img.sh  generate_meta1.py  get_url_from_html.py  get_urls.py  prepare_for_kohya_ss_sd_cmd.py  prepare_for_kohya_ss_sd_scripts.py  rename_output_filename.py  resize.py  rewrite_config.py  tag2json.py  train_lora.sh
scripts/prepare/: download.py  get_urls.py  resize.py  trim_tagger_result.py
scripts/train_lora/: convert_test_prompt.py  copy_models.py  filtered_mksymlink.py  generate_meta1.py  generate_meta3.py  meta3_to_prompt_config.py  rewrite_config.py  train_lora.sh
tests/: test_triggers.py
url_list/: anko.txt  awamo.txt  itako.txt  itako_oc.txt  kiritan.txt  kiritan_oc.txt  kiritan_sd.txt  melon.txt  metan.txt  metan_oc.txt  shinobi.txt  sora.txt  sora_sd.txt  tsurugi.txt  usagi.txt  zundamon.txt  zundamon_fairy.txt  zunko.txt  zunko_oc.txt  zunko_sd.txt
url_list/_special/: itako.txt  kiritan_logo.txt  misc.txt  zundamon.txt  zundamon_logo.txt  zunko.txt
