[tool.poetry]
name = "tohoku-sd-preparation"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.28.1"
pillow = "^10.3.0"
toml = "^0.10.2"
tensorboard = "^2.15.1"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.2.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["**/third", ".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"
reportUnusedVariable="warning"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
