[project]
name = "tohoku-sd-lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pillow>=10.4.0",
  "pydantic>=2.9.2",
  "requests>=2.32.3",
  "tensorboard>=2.17.1",
  "toml>=0.10.2",
]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.9.6", "yamllint>=1.35.1"]

[tool.pyright]
reportDeprecated = "error"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
