[tool.poetry]
name = "sd-scripts"
version = "0.4.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "library"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "*"
torchvision = "*"
accelerate = "0.15.0"
safetensors = "0.2.6"
easygui = "0.98.3"
transformers = "4.26.0"
ftfy = "6.1.1"
albumentations = "1.3.0"
opencv-python = "4.7.0.68"
einops = "0.6.0"
diffusers = {version = "0.10.2", extras = ["torch"]}
pytorch-lightning = "1.9.0"
bitsandbytes = "0.35.0"
tensorboard = "2.10.1"
gradio = "3.16.2"
altair = "4.2.2"
tensorflow = "<2.11,>=2.10"
xformers = "0.0.17.dev482"
timm = "^0.6.12"
fairscale = "^0.4.13"
toml = "^0.10.2"
voluptuous = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
